# articles

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini
article/: admin.py  models.py  serializers.py  urls.py  views.py
article/migrations/: 0001_initial.py
article/schema/: schema_extension.py  serializers_for_schema.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  settings_dev.py  settings_test.py
